# math-modeling

./: .gitignore  1.md  README.md  logging.conf  main.py  pyproject.toml  requirements.txt  visualize.py
config/: config.yaml  predict-season.yaml  predict-simple.yaml  predict-sine.yaml  season.yaml  simple.yaml  sine.yaml
config/predict/: model-season.yaml  model-simple.yaml  model-sine.yaml
config/simulate/: model-season.yaml  model-simple.yaml  model-sine.yaml
data/: SURFACE_AWS_678_DAY_2019_2019_2025.csv
data/processed/: LessModel_proportion.json  SeasonModel_proportion.json  SineModel_proportion.json  asos-season-large-evaporation.json  asos-season-precipitation.json  asos-season-relative-humidity.json  asos-season-small-evaporation.json  asos-season-temperature.json  asos-season-wind.json  asos-sine-large-evaporation.json  asos-sine-precipitation.json  asos-sine-relative-humidity.json  asos-sine-small-evaporation.json  asos-sine-temperature.json  asos-sine-wind.json  aws-season-precipitation.json  aws-sine-precipitation.json  water_use.json
data/raw/: 2015_2025_저수율_현황.csv  SURFACE_ASOS_105_DAY_2019_2019_2025.csv  수모델_월별물사용량.csv  수모델_월별물사용량_UTF-8.csv
pipeline/: all.bat  all.sh  data-process.bat  predict-season.bat  predict-simple.sh  simulate-season.bat  simulate-simple.sh  simulate-sine.sh
src/: asos.py  aws.py  models.py  predict.py  simulate.py  water.py
